--- a/work.html
+++ b/work.html
@@ -173,7 +173,7 @@
         </div>
         <div class="work-item">
             <a href="Projects/Ersatz.html">
-                <img src="ersatz.png" alt="Project 1">
+                <img src="ersatz2.png" alt="Project 1">
                 <h3>ERSATZ</h3>
                 <p>Canon 77d ~ Adobe PremierePro & Photoshop ~ REAPER ~ GarageBand ~<br> Live Projection ~ Live Immersive Experience</p>
             </a>
