--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             font-family: 'Vollkorn', serif;
             margin: 0;
             padding: 0;
-            background-color: #000000;
+            background-image: url('Background.jpg'); /* Set the background image */
+            background-size: cover; /* Ensure the image covers the entire viewport */
+            background-position: center center; /* Center the image */
+            background-attachment: fixed; /* Keep the background fixed during scrolling */
             color: #FFFFFF;
         }
         
@@ -20,7 +23,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #000000;
+            background-color: rgba(0, 0, 0, 0.3); /* Semi-transparent black background */
             padding: 40px 2%;
             position: fixed;
             width: 100%;
@@ -65,7 +68,6 @@
         /* Horizontal Line */
         .horizontal-line-1 {
             width: 100%;
-            border-top: 33px solid #A9A9A9;
             margin-top: 90px; /* Space below menu bar */
         }
 
@@ -80,7 +82,7 @@
         .main-header {
             text-align: center;
             font-size: 3.5em;
-            margin-top: 1.5in;
+            margin-top: 2.75in;
         }
 
         /* Top Image */
@@ -119,7 +121,6 @@
             display: block;
             margin: 20px 0; /* Adjust space around the centered text */
         }
-
 
         /* Centered Text Block */
         .centered-text {
@@ -207,7 +208,6 @@
         <br><br><br>Please feel free to reach out to me at scallesen20@gmail.com if you'd like to connect and/or collaborate!</span>
     </p>
 </section>
-
 
     <!-- Button Section -->
     <div class="button-section">
