--- a/about.html
+++ b/about.html
@@ -11,7 +11,10 @@
             font-family: 'Vollkorn', serif;
             margin: 0;
             padding: 0;
-            background-color: #000000;
+            background-image: url('Background.jpg'); /* Set the background image */
+            background-size: cover; /* Ensures the image covers the entire background */
+            background-position: center; /* Keeps the image centered */
+            background-attachment: fixed; /* Keeps the image in place when scrolling */
             color: #FFFFFF;
         }
         
@@ -20,7 +23,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #000000;
+            background-color: rgba(0, 0, 0, 0.3); /* Slight transparent black background */
             padding: 40px 2%;
             position: fixed;
             width: 100%;
@@ -357,7 +360,7 @@
             <ul class="training-list-2">
                 <li>Ableton & Max MSP | Arizona State University | Serena Ferrando & Kimberly Marshall</li>
                 <li>REAPER | Arizona State University | Daniel Jaquette</li>
-                <br><br>
+                <br>
             </ul>
         </div>
 
@@ -372,7 +375,7 @@
                 <li>Experimental Theatre & Performance | Arizona State University | Lance Gharavi</li>
                 <li>Advanced Stagecraft | Arizona State University | Heather (Digger) Feeney</li>
                 <li>Directing | Arizona State University | Marissa Barnathan</li>
-                <br><br>
+                <br>
             </ul>
         </div>
 
