--- a/Projects/CulturalPotluck.html
+++ b/Projects/CulturalPotluck.html
@@ -11,16 +11,19 @@
             font-family: 'Vollkorn', serif;
             margin: 0;
             padding: 0;
-            background-color: #000000;
-            color: #FFFFFF;
-        }
+            background-image: url('../Background.jpg'); /* Use the image as the background */
+            background-size: cover; /* Ensures the image covers the entire screen */
+            background-position: center; /* Position the image at the center */
+            background-attachment: fixed; /* Fix the background image so it doesn't scroll */
+            color: #FFFFFF; /* Maintain text color for readability */
+        }        
         
         /* Menu Bar */
         .menu-bar {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #000000;
+            background-color: rgba(0, 0, 0, 0.3); /* Semi-transparent black to make text readable */
             padding: 40px 2%;
             position: fixed;
             width: 100%;
@@ -65,8 +68,7 @@
         /* Horizontal Line */
         .horizontal-line-1 {
             width: 100%;
-            border-top: 33px solid #A9A9A9;
-            margin-top: 90px; /* Space below menu bar */
+            margin-top: 1.75in; /* Space below menu bar */
         }
 
         /* Reset styles */
@@ -206,7 +208,7 @@
                                 learn more about our respective cultures, as well as allow them to feel open to sharing their own, by "breaking the 4th wall" and forcing perspective, so that 
                                 they became the 4th person & closing point in the circle that was out Cultural Potluck.
         </p>
-
+ 
 
         <!-- Role Header 1 -->
         <h2 class="role-header">Showcased:</h2>
@@ -216,7 +218,7 @@
             <br>at APMA at Arizona State University 
             <br>on April 21, 2023.
         </p>
-        
+
          <!-- Role Header -->
          <h2 class="role-header">Role:</h2>
 
