--- a/about.html
+++ b/about.html
@@ -81,13 +81,15 @@
     
         /* Top Image */
         .image-container {
-            width: 100%;
+            width: 75%; /* Set the image container to 75% of the screen width */
+            margin: 2.25in auto 0; /* Auto on left and right to center the container */
             overflow: hidden;
         }
-
+        
+        /* Image Styling */
         .image-container img {
-            width: 100%;
-            height: auto;
+            width: 100%; /* Ensure the image fills the container */
+            height: auto; /* Maintain aspect ratio */
         }
 
         /* Header */
@@ -286,7 +288,7 @@
 
     <!-- Top Image -->
     <div class="image-container">
-        <img src="Profile-Pic.jpeg" alt="Profile Image">
+        <img src="Profile-Pic2.jpg" alt="Profile Image">
     </div>
 
     <!-- Header -->
