--- a/work.html
+++ b/work.html
@@ -238,17 +238,17 @@
             </a>
         </div>
         <div class="work-item">
-            <a href="Projects/Extra.html">
-                <img src="Art.png" alt="Project 1">
-                <h3>Art, Design & Photography</h3>
-                <p>Canon 77d ~ Adobe Photoshop ~<br>Chalk Pastel ~ Charcoal ~ Procreate</p>
+            <a href="Projects/DigitalDesign.html">
+                <img src="Photography2.JPG" alt="Project 2">
+                <h3>Photography</h3>
+                <p>Contax G1 (Film) ~ Cannon 77D (Digital)</p>
             </a>
         </div>
         <div class="work-item">
-            <a href="Projects/DigitalDesign.html">
-                <img src="DD.png" alt="Project 2">
-                <h3>Digital Design</h3>
-                <p>Adobe Creative Cloud ~ Microsoft Suite ~ Canva</p>
+            <a href="Projects/Extra.html">
+                <img src="Art.png" alt="Project 1">
+                <h3>Art & Design</h3>
+                <p>Adobe Creative Cloud ~ Microsoft Suite ~<br>Chalk Pastel ~ Charcoal ~ Procreate ~ Canva</p>
             </a>
         </div>
     </section>
