--- a/Projects/DigitalDesign.html
+++ b/Projects/DigitalDesign.html
@@ -177,16 +177,29 @@
         <h1 class="section-header">Film Photography</h1>
         <div class="image-grid">
             <div class="row">
-                <img src="Extra Pics/P3.jpeg" alt="Image 2">
-                <img src="Extra Pics/P11.jpg" alt="Image 3">
-                <img src="Extra Pics/P5.jpg" alt="Image 4">
-                <img src="Extra Pics/P9.jpg" alt="Image 5">
+                <img src="Digital Design Pics/P3.jpeg" alt="Image 2">
+                <img src="Digital Design Pics/P11.jpg" alt="Image 3">
+                <img src="Digital Design Pics/P5.jpg" alt="Image 4">
             </div>
             <div class="row">
-                <img src="Extra Pics/P4.jpg" alt="Image 6">
-                <img src="Extra Pics/P7.jpg" alt="Image 7">
-                <img src="Extra Pics/P1.JPG" alt="Image 8">
-                <img src="Extra Pics/P10.jpg" alt="Image 9">
+                <img src="Digital Design Pics/P4.jpg" alt="Image 5">
+                <img src="Digital Design Pics/P7.jpg" alt="Image 6">
+                <img src="Digital Design Pics/P1.JPG" alt="Image 7">
+            </div>
+            <div class="row">
+                <img src="Digital Design Pics/P10.jpg" alt="Image 8">
+                <img src="Digital Design Pics/P4.jpg" alt="Image 9">
+                <img src="Digital Design Pics/P7.jpg" alt="Image 10">
+            </div>
+            <div class="row">
+                <img src="Digital Design Pics/P10.jpg" alt="Image 11">
+                <img src="Digital Design Pics/P1.JPG" alt="Image 12">
+                <img src="Digital Design Pics/P10.jpg" alt="Image 13">
+            </div>
+            <div class="row">
+                <img src="Digital Design Pics/P4.jpg" alt="Image 14">
+                <img src="Digital Design Pics/P7.jpg" alt="Image 15">
+                <img src="Digital Design Pics/P1.JPG" alt="Image 16">
             </div>
         </div>
     </section>
@@ -199,13 +212,21 @@
                 <img src="Extra Pics/P3.jpeg" alt="Image 2">
                 <img src="Extra Pics/P11.jpg" alt="Image 3">
                 <img src="Extra Pics/P5.jpg" alt="Image 4">
-                <img src="Extra Pics/P9.jpg" alt="Image 5">
             </div>
             <div class="row">
-                <img src="Extra Pics/P4.jpg" alt="Image 6">
-                <img src="Extra Pics/P7.jpg" alt="Image 7">
+                <img src="Extra Pics/P.jpg" alt="Image 5">
+                <img src="Extra Pics/P9.jpg" alt="Image 6">
+                <img src="Extra Pics/P.jpg" alt="Image 7">
+            </div>
+            <div class="row">
                 <img src="Extra Pics/P1.JPG" alt="Image 8">
-                <img src="Extra Pics/P10.jpg" alt="Image 9">
+                <img src="Extra Pics/P7.jpg" alt="Image 9">
+                <img src="Extra Pics/P10.jpg" alt="Image 10">
+            </div>
+            <div class="row">
+                <img src="Extra Pics/P.jpg" alt="Image 11">
+                <img src="Extra Pics/P.jpg" alt="Image 12">
+                <img src="Extra Pics/P4.jpg" alt="Image 13">
             </div>
         </div>
     </section>
