--- a/work.html
+++ b/work.html
@@ -239,7 +239,7 @@
         </div>
         <div class="work-item">
             <a href="Projects/DigitalDesign.html">
-                <img src="Photography2.JPG" alt="Project 2">
+                <img src="Photography2.jpg" alt="Project 2">
                 <h3>Photography</h3>
                 <p>Contax G1 (Film) ~ Cannon 77D (Digital)</p>
             </a>
