--- a/about.html
+++ b/about.html
@@ -336,6 +336,7 @@
                 <li>Markup Languages: HTML & CSS</li>
                 <li>AI: Prompt Engineering</li>
                 <li>C++ for Unreal Engine Blueprints</li>
+                <li>C# for Unity Engine (Beginner)</li>
             </ul>
         </div>
     </section>
@@ -346,13 +347,14 @@
     <!-- About Section 3 - Training -->
     <section class="about-section-2">
         <div class="training-entry">
-            <p class="training-paragraph">Extended Reality (XR)<br></p>
+            <p class="training-paragraph">Extended Reality (XR) & Games<br></p>
             <ul class="training-list">
                 <li>Adobe Creative Cloud | Arizona State University | Robert Karimi & Max Bernstein</li>
                 <li>Storytelling | Arizona State University | Lance Gharavi</li>
                 <li>Interactive Participatory Performance:CollabHouse | Arizona State University | Robert Karimi</li>
                 <li>Performing in the Virtual | Arizona State University | Robert Karimi & Max Bernstein</li>
                 <li>Designing Extended Reality Experiences | Arizona State University | Shaoyu Su & Biayna Bogosian</li>
+                <li>Writing for Games & AI | Arizona State University | Robert Karimi</li>
                 <br>
             </ul>
         </div>
@@ -388,8 +390,8 @@
                 <li>Intermediate Italian I/II | Arizona State University | Antonella Dell'Anna</li>
                 <li>Speak Italy: Language, People, Culture | Scuola Dante Alighieri Recanati | Gina Pietrantoni & Juliann Vitullo</li>
                 <li>Advanced Italian | Scuola Dante Alighieri Recanati | Gina Pietrantoni & Juliann Vitullo</li>
-                <li>A1 Spanish | Duolingo</li>
-                <li>A1 French | Duolingo</li>
+                <li>A1 Spanish</li>
+                <li>A1 French</li>
                 <br><br>
             </ul>
         </div>
