--- a/Projects/DigitalDesign.html
+++ b/Projects/DigitalDesign.html
@@ -177,29 +177,29 @@
         <h1 class="section-header">Film Photography</h1>
         <div class="image-grid">
             <div class="row">
-                <img src="Digital Design Pics/P3.jpeg" alt="Image 2">
-                <img src="Digital Design Pics/P11.jpg" alt="Image 3">
-                <img src="Digital Design Pics/P5.jpg" alt="Image 4">
+                <img src="Digital Design Pics/DDF1.JPEG" alt="Image 2">
+                <img src="Digital Design Pics/DDF2.JPEG" alt="Image 3">
+                <img src="Digital Design Pics/DDF3.JPEG" alt="Image 4">
             </div>
             <div class="row">
-                <img src="Digital Design Pics/P4.jpg" alt="Image 5">
-                <img src="Digital Design Pics/P7.jpg" alt="Image 6">
-                <img src="Digital Design Pics/P1.JPG" alt="Image 7">
+                <img src="Digital Design Pics/DDF4.JPEG" alt="Image 5">
+                <img src="Digital Design Pics/DDF5.JPEG" alt="Image 6">
+                <img src="Digital Design Pics/DDF6.JPEG" alt="Image 7">
             </div>
             <div class="row">
-                <img src="Digital Design Pics/P10.jpg" alt="Image 8">
-                <img src="Digital Design Pics/P4.jpg" alt="Image 9">
-                <img src="Digital Design Pics/P7.jpg" alt="Image 10">
+                <img src="Digital Design Pics/DDF7.jpg" alt="Image 8">
+                <img src="Digital Design Pics/DDF8.JPEG" alt="Image 9">
+                <img src="Digital Design Pics/DDF9.JPEG" alt="Image 10">
             </div>
             <div class="row">
-                <img src="Digital Design Pics/P10.jpg" alt="Image 11">
-                <img src="Digital Design Pics/P1.JPG" alt="Image 12">
-                <img src="Digital Design Pics/P10.jpg" alt="Image 13">
+                <img src="Digital Design Pics/DDF10.JPEG" alt="Image 11">
+                <img src="Digital Design Pics/DDF11.JPEG" alt="Image 12">
+                <img src="Digital Design Pics/DDF12.JPEG" alt="Image 13">
             </div>
             <div class="row">
-                <img src="Digital Design Pics/P4.jpg" alt="Image 14">
-                <img src="Digital Design Pics/P7.jpg" alt="Image 15">
-                <img src="Digital Design Pics/P1.JPG" alt="Image 16">
+                <img src="Digital Design Pics/DDF13.JPEG" alt="Image 14">
+                <img src="Digital Design Pics/DDF14.JPEG" alt="Image 15">
+                <img src="Digital Design Pics/DDF15.JPEG" alt="Image 16">
             </div>
         </div>
     </section>
@@ -214,9 +214,9 @@
                 <img src="Extra Pics/P5.jpg" alt="Image 4">
             </div>
             <div class="row">
-                <img src="Extra Pics/P.jpg" alt="Image 5">
-                <img src="Extra Pics/P9.jpg" alt="Image 6">
-                <img src="Extra Pics/P.jpg" alt="Image 7">
+                <img src="Digital Design Pics/DD1.jpg" alt="Image 5">
+                <img src="Extra Pics/P9.jpg" alt="Image 7">
+                <img src="Digital Design Pics/DD5.jpg" alt="Image 6">
             </div>
             <div class="row">
                 <img src="Extra Pics/P1.JPG" alt="Image 8">
@@ -224,8 +224,8 @@
                 <img src="Extra Pics/P10.jpg" alt="Image 10">
             </div>
             <div class="row">
-                <img src="Extra Pics/P.jpg" alt="Image 11">
-                <img src="Extra Pics/P.jpg" alt="Image 12">
+                <img src="Digital Design Pics/DD2.jpg" alt="Image 11">
+                <img src="Digital Design Pics/DD4.jpg" alt="Image 12">
                 <img src="Extra Pics/P4.jpg" alt="Image 13">
             </div>
         </div>
