--- a/Projects/DigitalDesign.html
+++ b/Projects/DigitalDesign.html
@@ -187,7 +187,7 @@
                 <img src="Digital Design Pics/DDF6.JPEG" alt="Image 7">
             </div>
             <div class="row">
-                <img src="Digital Design Pics/DDF7.jpg" alt="Image 8">
+                <img src="Digital Design Pics/DDF7.JPEG" alt="Image 8">
                 <img src="Digital Design Pics/DDF8.JPEG" alt="Image 9">
                 <img src="Digital Design Pics/DDF9.JPEG" alt="Image 10">
             </div>
