--- a/index.html
+++ b/index.html
@@ -81,8 +81,16 @@
         /* Header */
         .main-header {
             text-align: center;
-            font-size: 3.5em;
+            font-size: 6em;
             margin-top: 2.75in;
+            margin-bottom: 0in;
+        }
+
+        /* Header 2*/
+        .main-header-2 {
+            text-align: center;
+            font-size: 2em;
+            margin-top: 0.25in;
         }
 
         /* Top Image */
@@ -195,6 +203,7 @@
 
     <!-- Header -->
     <h1 class="main-header">Sophia Callesen</h1>
+    <h2 class="main-header-2">Immersive VR & XR Experiences |<br> Graphic Design & Interactive Media</h2>
 
     <!-- Top Image -->
     <div class="image-container">
@@ -234,3 +243,4 @@
     </footer>
 </body>
 </html>
+
