--- a/work.html
+++ b/work.html
@@ -168,6 +168,13 @@
     <!-- Work Section -->
     <section class="work-section">
         <div class="work-item">
+            <a href="Projects/ADC.html">
+                <img src="ADC2.jpeg" alt="Project 2">
+                <h3>American Dream Casino: HRO</h3>
+                <p>Production Assistant ~ Documentor<br> Unity Engine ~ PremierePro & Photoshop ~<br> REAPER ~ Live Immersive Experience</p>
+            </a>
+        </div>
+        <div class="work-item">
             <a href="Projects/StarryNight.html">
                 <img src="StarryNightPoster.jpg" alt="Project 2">
                 <h3>Dreams and Dangers:<br> A Starry Night Experience</h3>
