--- a/work.html
+++ b/work.html
@@ -12,11 +12,24 @@
             margin: 0;
             padding: 0;
             background-image: url('Background.jpg'); /* Set the background image */
-            background-size: cover; /* Ensure the image covers the entire screen */
-            background-position: center; /* Center the image */
-            background-attachment: fixed; /* Make the background fixed so it doesn't scroll */
+            background-size: cover; /* Ensure the image covers the entire viewport */
+            background-position: center center; /* Center the image */
+            background-attachment: fixed; /* Keep the background fixed during scrolling */
             color: #FFFFFF;
+            height: 100%;
+            cursor: default;     /* hide native cursor */
         }
+
+        /* Particle Cursor Canvas */
+        canvas.particle-cursor {
+            position: fixed;
+            inset: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 9999;
+            mix-blend-mode: screen; /* keeps glow bright over dark backgrounds */
+          }
         
         /* Menu Bar */
         .menu-bar {
@@ -142,6 +155,12 @@
     </style>
 </head>
 <body>
+    <!-- Canvas element for the glowing cursor -->
+    <canvas class="particle-cursor"></canvas>
+    
+    <!-- JS Cursor Reference-->
+    <script src="script.js"></script>
+
     <!-- Menu Bar -->
     <div class="menu-bar">
         <!-- Left Side: Social Buttons -->
@@ -221,13 +240,6 @@
                 <img src="Unity Landscape.png" alt="Project 2">
                 <h3>Unity Landscape</h3>
                 <p>Unity 3D ~ UI Interactivity</p>
-            </a>
-        </div>
-        <div class="work-item">
-            <a href="Projects/UnityBusinessCard.html">
-                <img src="BC.png" alt="Project 1">
-                <h3>AR Business Card</h3>
-                <p>Unity 3D ~ Vuforia</p>
             </a>
         </div>
         <div class="work-item">
